ionos_sbx/analytics/analyticsstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticsstack
  namespace: analytics
  labels:
    app.kubernetes.io/instance: analyticsstack
    app.kubernetes.io/name: analyticsstack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: analyticsstack
      app.kubernetes.io/name: analyticsstack
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: analyticsstack
        app.kubernetes.io/name: analyticsstack
    spec:
      containers:
        - name: analyticsstack
          image: docker.ramp.eu/dome/dome-matomo-backend-app:dev_6_03_2024_01
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/analyticsstack/public/uploads
              name: analyticsstack-uploads
            - mountPath: /var/www/analyticsstack/storage/uploads
              name: analyticsstack-storage-uploads
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      volumes: 
      - name: analyticsstack-uploads
        persistentVolumeClaim:
          claimName: kb-analyticsstack-uploads-pvc
      - name: analyticsstack-storage-uploads
        persistentVolumeClaim:
          claimName: kb-analyticsstack-storage-uploads-pvc
