ionos_sbx/analytics/analyticsstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-ingress
  namespace: analytics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: analytics.dome-marketplace-sbx.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: analyticsstack
            port:
              number: 8080
  tls:
  - hosts:
    - analytics.dome-marketplace-sbx.org
    secretName: analytics-tls-secret
